--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             <div class="col-lg-3 col-md-6 col-sm-12 pb-1">
                 <div class="d-flex align-items-center border mb-4" style="padding: 30px;">
                     <h1 class="fa fa-phone-volume text-primary m-0 mr-3"></h1>
-                    <h5 class="font-weight-semi-bold m-0">Gmailden yardım</h5>
+                    <h5 class="font-weight-semi-bold m-0">Smsden yardım</h5>
                 </div>
             </div>
         </div>
