--- a/index.html
+++ b/index.html
@@ -459,7 +459,9 @@
                        
                         <div class="input-group-append">
                             <a href='https://www.roblox.com/Login'><button>Bağış</button></a>    
-                            </form>
+                            <a href="default.asp">
+                            <img src="smiley.gif" alt="https://www.roblox.com/Login" style="width:42px;height:42px;">
+                            </a>
                         </div>
                     </div>
                 </form>
