--- a/detail.html
+++ b/detail.html
@@ -539,7 +539,7 @@
                                     required="required" />
                             </div>
                             <div>
-                                <button class="btn btn-primary btn-block border-0 py-3" type="submit">Subscribe Now</button>
+                                <button class="btn btn-primary btn-block border-0 py-3" type="submit">Mesaj Gönder</button>
                             </div>
                         </form>
                     </div>
@@ -549,9 +549,9 @@
         <div class="row border-top border-light mx-xl-5 py-4">
             <div class="col-md-6 px-xl-0">
                 <p class="mb-md-0 text-center text-md-left text-dark">
-                    &copy; <a class="text-dark font-weight-semi-bold" href="#">Your Site Name</a>. All Rights Reserved. Designed
+                    &copy; <a class="text-dark font-weight-semi-bold" href="#">StarSuit</a>. Tüm Hakları Saklıdır 
                     by
-                    <a class="text-dark font-weight-semi-bold" href="https://htmlcodex.com">HTML Codex</a>
+                    <a class="text-dark font-weight-semi-bold" href="https://htmlcodex.com"></a>
                 </p>
             </div>
             <div class="col-md-6 px-xl-0 text-center text-md-right">
