--- a/detail.html
+++ b/detail.html
@@ -405,7 +405,7 @@
     <!-- Products Start -->
     <div class="container-fluid py-5">
         <div class="text-center mb-4">
-            <h2 class="section-title px-5"><span class="px-2">You May Also Like</span></h2>
+            <h2 class="section-title px-5"><span class="px-2">Beğenebileceğiniz Ürünler</span></h2>
         </div>
         <div class="row px-xl-5">
             <div class="col">
@@ -550,7 +550,7 @@
             <div class="col-md-6 px-xl-0">
                 <p class="mb-md-0 text-center text-md-left text-dark">
                     &copy; <a class="text-dark font-weight-semi-bold" href="#">StarSuit</a>. Tüm Hakları Saklıdır 
-                    by
+                    
                     <a class="text-dark font-weight-semi-bold" href="https://htmlcodex.com"></a>
                 </p>
             </div>
