--- a/detail.html
+++ b/detail.html
@@ -256,7 +256,7 @@
         <div class="row px-xl-5">
             <div class="col">
                 <div class="nav nav-tabs justify-content-center border-secondary mb-4">
-                    <a class="nav-item nav-link active" data-toggle="tab" href="#tab-pane-1">Ürün Tanıtımı</a>
+                    <a class="nav-item nav-link active" data-toggle="tab" href="#tab-pane-1">Ürün Açıklaması</a>
                     <a class="nav-item nav-link" data-toggle="tab" href="#tab-pane-2">Ürün Bilgisi</a>
                 </div>
                 <div class="tab-content">
