--- a/index.html
+++ b/index.html
@@ -670,39 +670,21 @@
             <div class="col-lg-8 col-md-12">
                 <div class="row">
                     <div class="col-md-4 mb-5">
-                        <h5 class="font-weight-bold text-dark mb-4">Quick Links</h5>
+                        <h5 class="font-weight-bold text-dark mb-4">Eğer Bizi Özelden Takip Etmek İstersen:</h5>
                         <div class="d-flex flex-column justify-content-start">
-                            <a class="text-dark mb-2" href="index.html"><i class="fa fa-angle-right mr-2"></i>Home</a>
-                            <a class="text-dark mb-2" href="shop.html"><i class="fa fa-angle-right mr-2"></i>Our Shop</a>
-                            <a class="text-dark mb-2" href="detail.html"><i class="fa fa-angle-right mr-2"></i>Shop Detail</a>
+                            <a class="text-dark mb-2" href="https://www.instagram.com/alpr__16/"></i>İnstagram_1</a>
+                            <a class="text-dark mb-2" href="https://www.instagram.com/ugurblyat/"></i>İnstagram_2</a>
+                            <a class="text-dark mb-2" href="https://www.instagram.com/_ysrhn_/"></i>İnstagram_3</a>
                             <a class="text-dark mb-2" href="cart.html"><i class="fa fa-angle-right mr-2"></i>Shopping Cart</a>
                             <a class="text-dark mb-2" href="checkout.html"><i class="fa fa-angle-right mr-2"></i>Checkout</a>
                             <a class="text-dark" href="contact.html"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
                         </div>
                     </div>
+                   
                     <div class="col-md-4 mb-5">
-                        <h5 class="font-weight-bold text-dark mb-4">Quick Links</h5>
-                        <div class="d-flex flex-column justify-content-start">
-                            <a class="text-dark mb-2" href="index.html"><i class="fa fa-angle-right mr-2"></i>Home</a>
-                            <a class="text-dark mb-2" href="shop.html"><i class="fa fa-angle-right mr-2"></i>Our Shop</a>
-                            <a class="text-dark mb-2" href="detail.html"><i class="fa fa-angle-right mr-2"></i>Shop Detail</a>
-                            <a class="text-dark mb-2" href="cart.html"><i class="fa fa-angle-right mr-2"></i>Shopping Cart</a>
-                            <a class="text-dark mb-2" href="checkout.html"><i class="fa fa-angle-right mr-2"></i>Checkout</a>
-                            <a class="text-dark" href="contact.html"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
-                        </div>
-                    </div>
-                    <div class="col-md-4 mb-5">
-                        <h5 class="font-weight-bold text-dark mb-4">Bize Ulaşabilirsin</h5>
-                        <form action="">
-                            <div class="form-group">
-                                <input type="text" class="form-control border-0 py-4" placeholder="İsim" required="required" />
-                            </div>
-                            <div class="form-group">
-                                <input type="email" class="form-control border-0 py-4" placeholder="Gmail"
-                                    required="required" />
-                            </div>
                             <div>
-                                <button class="btn btn-primary btn-block border-0 py-3" type="submit">Mesaj Gönder</button>
+                                <h5 class="font-weight-bold text-dark mb-4">Eğer Bize Bir Şey Söylemel İstersen:</h5>
+                                <a class="btn btn-primary btn-block border-0 py-3" href="https://mail.google.com/mail/u/5/?tab=km#inbox?compose=CllgCHrlFZDxVQtdKXvRCjzHKJmFgBMtwlBpGQCJGpcQDFDzDtswqgmCNQfWwQMhlrNDwDFHQxq"  type="submit">Bize Ulaş</button></a>
                             </div>
                         </form>
                     </div>
