--- a/index.html
+++ b/index.html
@@ -451,14 +451,14 @@
         <div class="row justify-content-md-center py-5 px-xl-5">
             <div class="col-md-6 col-12 py-5">
                 <div class="text-center mb-2 pb-2">
-                    <h2 class="section-title px-5 mb-3"><span class="bg-secondary px-2">Bağış</span></h2>
-                    <p>Eğer bize yardımda bulunmak istersen aşağıdaki butona tıklayabilirsin.</p>
+                    <h2 class="section-title px-5 mb-3"><span class="bg-secondary px-2">Bağış Bulunabilirsin</span></h2>
+                    <p>Eğer bize yardımda bulunmak istersen aşağıdaki butona tıklayabilirsin:</p>
                 </div>
                 <form action="">
                     <div class="input-group">
                        
                         <div class="input-group-append">
-                            <a href='https://www.roblox.com/Login'><button>Bağış</button></a>    
+                            <a class="btn btn-primary btn-block border-0 py-3" href="https://mail.google.com/mail/u/5/?tab=km#inbox?compose=CllgCHrlFZDxVQtdKXvRCjzHKJmFgBMtwlBpGQCJGpcQDFDzDtswqgmCNQfWwQMhlrNDwDFHQxq"  type="submit">Bağışta Bulun</button></a>
                             <head>
                                 <link rel="stylesheet" href="styles.css">
                               </head>
@@ -682,7 +682,7 @@
                     <div class="col-md-4 mb-5">
                             <div>
                                 <h5 class="font-weight-bold text-dark mb-4">Eğer Bize Bir Şey Söylemel İstersen:</h5>
-                                <a class="btn btn-primary btn-block border-0 py-3" href="https://mail.google.com/mail/u/5/?tab=km#inbox?compose=CllgCHrlFZDxVQtdKXvRCjzHKJmFgBMtwlBpGQCJGpcQDFDzDtswqgmCNQfWwQMhlrNDwDFHQxq"  type="submit">Bize Ulaş</button></a>
+                                <a class="btn btn-primary btn-block border-0 py-3" href="https://mail.google.com/mail/u/5/?tab=km#inbox?compose=CllgCHrlFZDxVQtdKXvRCjzHKJmFgBMtwlBpGQCJGpcQDFDzDtswqgmCNQfWwQMhlrNDwDFHQxq" type="submit">Tıkla Bize Ula</button></a>
                             </div>
                         </form>
                     </div>
