--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
         <div class="row bg-secondary py-2 px-xl-5">
             <div class="col-lg-6 d-none d-lg-block">
                 <div class="d-inline-flex align-items-center">
-                    <a class="text-dark" href="">FAQs</a>
                     <span class="text-muted px-2">|</span>
                  <span class="text-muted px-2">Hızlı, güvenilir, kaliteli</span>
                    
@@ -682,7 +681,7 @@
                     <div class="col-md-4 mb-5">
                             <div>
                                 <h5 class="font-weight-bold text-dark mb-4">Eğer Bize Bir Şey Söylemel İstersen:</h5>
-                                <a class="btn btn-primary btn-block border-0 py-3" href="https://mail.google.com/mail/u/5/?tab=km#inbox?compose=CllgCHrlFZDxVQtdKXvRCjzHKJmFgBMtwlBpGQCJGpcQDFDzDtswqgmCNQfWwQMhlrNDwDFHQxq" type="submit">Tıkla Bize Ula</button></a>
+                                <a class="btn btn-primary btn-block border-0 py-3" href="https://mail.google.com/mail/u/5/?tab=km#inbox?compose=CllgCHrlFZDxVQtdKXvRCjzHKJmFgBMtwlBpGQCJGpcQDFDzDtswqgmCNQfWwQMhlrNDwDFHQxq" type="submit">Tıkla Bize Ulaş</button></a>
                             </div>
                         </form>
                     </div>
