--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
     <!-- Products Start -->
     <div class="container-fluid pt-5">
         <div class="text-center mb-4">
-            <h2 class="section-title px-5"><span class="px-2">Ürünlerimiz</span></h2>
+            <h2 class="section-title px-5"><span class="px-2">Kategorilerimiz</span></h2>
         </div>
         <div class="row px-xl-5 pb-3">
             <div class="col-lg-3 col-md-6 col-sm-12 pb-1">
@@ -384,8 +384,10 @@
                         </div>
                     </div>
                     <div class="card-footer d-flex justify-content-between bg-light border">
-                        <a href="detay.html" class="fas fa-eye text-primary mr-1"  class="nav-item nav-link">Detaylı İncele</a>
-                        <a href="" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Add To Cart</a>
+                        <a href="detay.html" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>Göz At</a>
+                        <a href="" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Satın Al&#160;
+                            &#160;
+                        </a>
                     </div>
                 </div>
             </div>
@@ -474,7 +476,7 @@
     <!-- Products Start -->
     <div class="container-fluid pt-5">
         <div class="text-center mb-4">
-            <h2 class="section-title px-5"><span class="px-2">Just Arrived</span></h2>
+            <h2 class="section-title px-5"><span class="px-2">Ürünlerimiz</span></h2>
         </div>
         <div class="row px-xl-5 pb-3">
             <div class="col-lg-3 col-md-6 col-sm-12 pb-1">
@@ -680,7 +682,7 @@
                    
                     <div class="col-md-4 mb-5">
                             <div>
-                                <h5 class="font-weight-bold text-dark mb-4">Eğer Bize Bir Şey Söylemel İstersen:</h5>
+                                <h5 class="font-weight-bold text-dark mb-4">Eğer Bize Bir Şey Söylemek İstersen:</h5>
                                 <a class="btn btn-primary btn-block border-0 py-3" href="https://mail.google.com/mail/u/5/?tab=km#inbox?compose=CllgCHrlFZDxVQtdKXvRCjzHKJmFgBMtwlBpGQCJGpcQDFDzDtswqgmCNQfWwQMhlrNDwDFHQxq" type="submit">Tıkla Bize Ulaş</button></a>
                             </div>
                         </form>
