--- a/index.html
+++ b/index.html
@@ -474,16 +474,16 @@
             <div class="col-lg-3 col-md-6 col-sm-12 pb-1">
                 <div class="card product-item border-0 mb-4">
                     <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0">
-                        <img class="img-fluid w-100" src="img/nikeçorap1.jpg" alt="">
+                        <img class="img-fluid w-100" src="img/kaymazçoraparkaresim.jpg" alt="">
                     </div>
                     <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
-                        <h6 class="text-truncate mb-3">Colorful Stylish Shirt</h6>
+                        <h6 class="text-truncate mb-3">Kaymaz Beyaz Çorap</h6>
                         <div class="d-flex justify-content-center">
                             <h6>150.00 TL</h6><h6 class="text-muted ml-2"><del></del></h6>
                         </div>
                     </div>
                     <div class="card-footer d-flex justify-content-between bg-light border">
-                        <a href="" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>Göz At</a>
+                        <a href="" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"> </i>Göz At</a>
                         <a href="" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Satın Al</a>
                     </div>
                 </div>
