--- a/kaymazçorap1.html
+++ b/kaymazçorap1.html
@@ -177,7 +177,7 @@
                             <img class="w-100 h-100" src="img/kaymazçoraparkaresim.jpg" alt="Image">
                         </div>
                         <div class="carousel-item">
-                            <img class="w-100 h-100" src="img/arkaçorapa.jpg" alt="Image">
+                            <img class="w-100 h-100" src="img/3lücorap.jpg" alt="Image">
                         </div>
                         <div class="carousel-item">
                             <img class="w-100 h-100" src="img/kaymazçorap.jpg" alt="Image">
