--- a/kaymazçorap1.html
+++ b/kaymazçorap1.html
@@ -39,8 +39,8 @@
             </div>
             <div class="col-lg-6 text-center text-lg-right">
                 <div class="d-inline-flex align-items-center">
-                    <a class="text-dark px-2" href="">
-                        <i class="fab fa-instagram">starsuit</i>
+                    <a class="text-dark px-2" href="https://www.instagram.com/officialstarsuit/">
+                        <i class="fab fa-instagram">officialstarsuit</i>
                     </a>
                 </div>
             </div>
