--- a/kaymazçorap1.html
+++ b/kaymazçorap1.html
@@ -39,7 +39,7 @@
             </div>
             <div class="col-lg-6 text-center text-lg-right">
                 <div class="d-inline-flex align-items-center">
-                    <a class="text-dark px-2" href="">
+                    <a class="text-dark px-2" href="https://www.instagram.com/officialstarsuit/">
                         <i class="fab fa-instagram">starsuit</i>
                     </a>
                 </div>
