--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
                         </div>
                     </div>
                     <div class="card-footer d-flex justify-content-between bg-light border">
-                        <a href="" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"> </i>Göz At</a> 
+                        <a href="kaymazçorap1.html" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"> </i>Göz At</a> 
                         <a href="" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Satın Al</a>
                     </div>
                 </div>
