--- a/kaymazçorap1.html
+++ b/kaymazçorap1.html
@@ -283,9 +283,11 @@
                 </div>
                 <div class="tab-content">
                     <div class="tab-pane fade show active" id="tab-pane-1">
-                        <h4 class="mb-3">Product Description</h4>
-                        <p>Eos no lorem eirmod diam diam, eos elitr et gubergren diam sea. Consetetur vero aliquyam invidunt duo dolores et duo sit. Vero diam ea vero et dolore rebum, dolor rebum eirmod consetetur invidunt sed sed et, lorem duo et eos elitr, sadipscing kasd ipsum rebum diam. Dolore diam stet rebum sed tempor kasd eirmod. Takimata kasd ipsum accusam sadipscing, eos dolores sit no ut diam consetetur duo justo est, sit sanctus diam tempor aliquyam eirmod nonumy rebum dolor accusam, ipsum kasd eos consetetur at sit rebum, diam kasd invidunt tempor lorem, ipsum lorem elitr sanctus eirmod takimata dolor ea invidunt.</p>
-                        <p>Dolore magna est eirmod sanctus dolor, amet diam et eirmod et ipsum. Amet dolore tempor consetetur sed lorem dolor sit lorem tempor. Gubergren amet amet labore sadipscing clita clita diam clita. Sea amet et sed ipsum lorem elitr et, amet et labore voluptua sit rebum. Ea erat sed et diam takimata sed justo. Magna takimata justo et amet magna et.</p>
+                        <h4 class="mb-3">Açıklama:</h4>
+                        <p>-Kaymaz ve darbe sönümleme: Spor çoraplarının alt tarafına çok sayıda silikon yapışkan nokta dağıtılmıştır. Bu tasarım ayağın ayakkabıda kaymasını etkili bir şekilde önler ve titreşimleri azaltır ve antrenmanı daha konforlu hale getirir.</p>
+                        <p>-Ayaklara yakın: İyi bir sargı sağlamak için gergin ortasında elastik bir dokuma yöntemi kullanılır. Ayrıca çorapları daha güçlü hale getirmek için ayak parmakları ve topuklar dikişlerle güçlendirilir.</p>
+                        <p>-Yüksek kaliteli malzeme: Koşu çorapları, yüksek esneklik ve yüksek nefes alabilirlik ile öne çıkan sentetik liflerden (spandeks) yapılmıştır. Bu özellikler, antrenmandan sonra terin etkili bir şekilde salınmasını sağlayabilir ve ayakları kuru ve rahat tutabilir.</p>
+                        <p>-Çok amaçlı: Çoraplar genel futbol ve basketbol antrenmanı, koşu, dağcılık, yürüyüş ve diğer spor türleri için uygundur. </p>
                     </div>
                     <div class="tab-pane fade" id="tab-pane-2">
                         <h4 class="mb-3">Ek Bilgiler:</h4>
