--- a/kaymazçorap1.html
+++ b/kaymazçorap1.html
@@ -485,7 +485,7 @@
                 <a href="" class="text-decoration-none">
                     <h1 class="mb-4 display-5 font-weight-semi-bold"><span class="text-primary font-weight-bold border border-white px-3 mr-1">Star</span>Suit</h1>
                 </a>
-                <p>Dolore erat dolor sit lorem vero amet. Sed sit lorem magna, ipsum no sit erat lorem et magna ipsum dolore amet erat.</p>
+                <p>İşimiz kaliteli ürünleri hazırlamak ve müşterilerimize temin etmektir. Bizi tercih ettiğiniz için teşekkür ederiz.</p>
                 <p class="mb-2"><i class="fa fa-envelope text-primary mr-3"></i>officalstarsuit@gmail.com</p>
                 <p class="mb-0"><i class="fa fa-phone-alt text-primary mr-3"></i>+90 538 786 3288</p>
                 <p class="mb-0"><i class="fa fa-phone-alt text-primary mr-3"></i>+90 539 698 0623</p>
