--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
                         <img class="img-fluid w-100" href="ka" src="img/kaymazçoraparkaresim.jpg" alt="">
                     </div>
                     <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
-                        <h6 class="text-truncate mb-3">3 Çift Kaymaz Beyaz Çorap</h6>
+                        <h6 class="text-truncate mb-3">3 Çift Kaymaz Taban Beyaz Çorap</h6>
                         <div class="d-flex justify-content-center">
                             <h6>250.00 TL</h6><h6 class="text-muted ml-2"><del></del></h6>
                         </div>
