--- a/kaymazçorap1.html
+++ b/kaymazçorap1.html
@@ -194,7 +194,7 @@
             </div>
 
             <div class="col-lg-7 pb-5">
-                <h3 class="font-weight-semi-bold">Kaymaz Beyaz Çorap</h3>
+                <h3 class="font-weight-semi-bold">3 Çift Kaymaz Beyaz Çorap</h3>
                 <div class="d-flex mb-3">
                     <div class="text-primary mr-2">
                         <small class="fas fa-star"></small>
@@ -208,7 +208,7 @@
                 <h3 class="font-weight-semi-bold mb-4">250 TL</h3>
                 <p class="mb-4">Volup erat ipsum diam elitr rebum et dolor. Est nonumy elitr erat diam stet sit clita ea. Sanc invidunt ipsum et, labore clita lorem magna lorem ut. Erat lorem duo dolor no sea nonumy. Accus labore stet, est lorem sit diam sea et justo, amet at lorem et eirmod ipsum diam et rebum kasd rebum.</p>
                 <div class="d-flex mb-3">
-                    <p class="text-dark font-weight-medium mb-0 mr-3">Sizes:</p>
+                    <p class="text-dark font-weight-medium mb-0 mr-3">Beden:</p>
                     <form>
                         <a>Bedenimiz 38 beden 46 beden arasıdır</a>
                     </form>
