--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link href="img/indir.png" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -65,7 +65,7 @@
             </div>
             <div class="col-lg-3 col-6 text-right">
                 <a href="" class="btn border">
-                    <i class="fas fa-heart text-primary"></i>
+                    <i class="fas fa-eye text-primary"></i>
                     <span class="badge">12</span>
                 </a>
                 <a href="" class="btn border">
@@ -613,38 +613,7 @@
 
 
     <!-- Vendor Start -->
-    <div class="container-fluid py-5">
-        <div class="row px-xl-5">
-            <div class="col">
-                <div class="owl-carousel vendor-carousel">
-                    <div class="vendor-item border p-4">
-                        <img src="img/vendor-1.jpg" alt="">
-                    </div>
-                    <div class="vendor-item border p-4">
-                        <img src="img/vendor-2.jpg" alt="">
-                    </div>
-                    <div class="vendor-item border p-4">
-                        <img src="img/vendor-3.jpg" alt="">
-                    </div>
-                    <div class="vendor-item border p-4">
-                        <img src="img/vendor-4.jpg" alt="">
-                    </div>
-                    <div class="vendor-item border p-4">
-                        <img src="img/vendor-5.jpg" alt="">
-                    </div>
-                    <div class="vendor-item border p-4">
-                        <img src="img/vendor-6.jpg" alt="">
-                    </div>
-                    <div class="vendor-item border p-4">
-                        <img src="img/vendor-7.jpg" alt="">
-                    </div>
-                    <div class="vendor-item border p-4">
-                        <img src="img/vendor-8.jpg" alt="">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+   
     <!-- Vendor End -->
 
 
@@ -658,7 +627,8 @@
                 <p>İşimiz kaliteli ürünleri hazırlamak ve müşterilerimize temin etmektir. Bizi tercih ettiğiniz için teşekkür ederiz.</p>
                 <p class="mb-2"><i class="fa fa-envelope text-primary mr-3"></i>officalstarsuit@gmail.com
                 </p>
-                <p class="mb-0"><i class="fa fa-phone-alt text-primary mr-3"></i>+012 345 67890</p>
+                <p class="mb-0"><i class="fa fa-phone-alt text-primary mr-3"></i> +90 538 786 3288</p>
+                <p class="mb-0"><i class="fa fa-phone-alt text-primary mr-3"></i>+90 539 698 0623</p>
             </div>
             <div class="col-lg-8 col-md-12">
                 <div class="row">
