--- a/kaymazçorap1.html
+++ b/kaymazçorap1.html
@@ -180,7 +180,7 @@
                             <img class="w-100 h-100" src="img/arkaçorapa.jpg" alt="Image">
                         </div>
                         <div class="carousel-item">
-                            <img class="w-100 h-100" src="img/kaymazçorap.jpg" alt="Image">
+                            <img class="w-100 h-100" src="" alt="Image">
                         </div>   
 
                     </div>
