--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
     <!-- Favicon -->
-    <link href="img/indir.png" rel="icon">
+    <link href="img/kisspng-star-logo-5af76bb4779ab6.8306596515261644044899.png" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
