--- a/shop.html
+++ b/shop.html
@@ -93,6 +93,11 @@
                            </div>
                            <b style="text-align: center">SİTEMİZ DAHA GELİŞME AŞAMASINDADIR ANLAYIŞINIZ İÇİN TEŞEKKÜRLER</b>
                              &#160;
+                             <b style="text-align: center">ÜRÜNLERİMİZ SİTEMİZE EKLENİYOR...</b>
+                             &#160;
+                             <b style="text-align: center"></b>
+                             <b style="text-align: center">ÖDEMELER İNSTAGRAM(officalstarsuit) VE İYZİCO İLE ÖDEME OLACAKTIR</b>
+                             &#160;
                              <b style="text-align: center"></b>
                             </div>
             </div>
